--- a/index.html
+++ b/index.html
@@ -786,10 +786,12 @@ and choice</i>", which, in today's digital environment, is often an indication t
 
 ## Vulnerability {#vulnerability}
 
-Sometimes particular groups are classed as “vulnerable” (e.g. children, or the
-elderly), but anyone could become privacy vulnerable in a given context.
+Sometimes particular groups of people, such as children, or the elderly,
+are classed as “vulnerable.” However, any [=person=] could be vulnerable in
+one or more contexts, sometimes without realizing it.
 A [=person=] may not realise when they disclose personal data that
-they are vulnerable or could become vulnerable.
+they are vulnerable or could become vulnerable, and a [=party=] may have
+no way of knowing that a person is vulnerable.
 
 Some individuals may be more vulnerable to privacy risks or harm as a result of
 collection, misuse, loss or theft of personal data because:
