context for vulnerable people

--- a/index.html
+++ b/index.html
@@ -2116,10 +2116,11 @@ is a [=person=] whose ability to make their own choices can be taken away more
 easily than usual. Among other things, they should
 be treated with greater default privacy protections and may be considered unable to
 [=consent=] to various interactions with a system.
-People can be vulnerable for different reasons, for example because they are children,
-are employees with respect to their employers, are facing a steep asymmetry of power,
-are people in some situations of intellectual or psychological impairment, are
-refugees, etc. See [[[#vulnerability]]].
+People can be vulnerable for different reasons, and some people may
+be vulnerable in a specific [=context=]. For example, a child might
+be vulnerable in many contexts, but a person in a position of power imbalance
+with an employer or other [=party=] might be specifically vulnerable in a
+context where they must interact with that party.  See [[[#vulnerability]]].
 
 ## Contexts {#context}
 
