Improve vulnerable people wording and links (#402)
Co-authored-by: Nick Doty <ndoty@cdt.org>

--- a/index.html
+++ b/index.html
@@ -786,10 +786,12 @@ and choice</i>", which, in today's digital environment, is often an indication t
 
 ## Vulnerability {#vulnerability}
 
-Sometimes particular groups are classed as “vulnerable” (e.g. children, or the
-elderly), but anyone could become privacy vulnerable in a given context.
+Sometimes particular groups of people, such as children, or the elderly,
+are classified as [=vulnerable people=]. However, any [=person=] could be vulnerable in
+one or more contexts, sometimes without realizing it.
 A [=person=] may not realise when they disclose personal data that
-they are vulnerable or could become vulnerable.
+they are vulnerable or could become vulnerable, and an [=actor=] may have
+no way of knowing that a person is vulnerable.
 
 Some individuals may be more vulnerable to privacy risks or harm as a result of
 collection, misuse, loss or theft of personal data because:
@@ -2114,10 +2116,11 @@ is a [=person=] whose ability to make their own choices can be taken away more
 easily than usual. Among other things, they should
 be treated with greater default privacy protections and may be considered unable to
 [=consent=] to various interactions with a system.
-People can be vulnerable for different reasons, for example because they are children,
-are employees with respect to their employers, are facing a steep asymmetry of power,
-are people in some situations of intellectual or psychological impairment, are
-refugees, etc. See [[[#vulnerability]]].
+People can be vulnerable for different reasons, and some people may
+be vulnerable in a specific [=context=]. For example, a child might
+be vulnerable in many contexts, but a person in a position of power imbalance
+with an employer or other [=actor=] might be vulnerable in the contexts
+where that actor is also present.  See [[[#vulnerability]]].
 
 ## Contexts {#context}
 
@@ -2267,7 +2270,7 @@ cross-context recognition.
 Systems which [=recognize=] people across [=contexts=] need
 to be careful not to apply the principles of one [=context=] in ways that
 violate the principles around use of information acquired in a different
-[=context=]. This is particularly true for [=vulnerable=] people, as
+[=context=]. This is particularly true for [=vulnerable people=], as
 recognising them in different [=contexts=] may force traits into the open
 that reveal their vulnerability. For example, if you meet your therapist at a
 party, you expect them to have different discussion topics with you than they
