Explain an implication of the vulnerability section. (#434)

--- a/index.html
+++ b/index.html
@@ -862,6 +862,7 @@ one or more contexts, sometimes without realizing it.
 A [=person=] may not realise when they disclose personal data that
 they are vulnerable or could become vulnerable, and an [=actor=] may have
 no way of knowing that a person is vulnerable.
+System designers should consider this in their system designs.
 
 Some individuals may be more vulnerable to privacy risks or harm as a result of
 collection, misuse, loss, or theft of personal data because:
