Explain an implication of the vulnerability section. (#434)
SHA: d27ae180c7bca2a0f9082155f94fdf697169eb09
Reason: push, by jyasskin

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1211,7 +1211,8 @@ are classified as <a data-link-type="dfn|abstract-op" href="#dfn-vulnerable" cla
 one or more contexts, sometimes without realizing it.
 A <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-41">person</a> may not realise when they disclose personal data that
 they are vulnerable or could become vulnerable, and an <a data-link-type="dfn|abstract-op" href="#dfn-actor" class="internalDFN" id="ref-for-dfn-actor-26">actor</a> may have
-no way of knowing that a person is vulnerable.</p>
+no way of knowing that a person is vulnerable.
+System designers should consider this in their system designs.</p>
 <p>Some individuals may be more vulnerable to privacy risks or harm as a result of
 collection, misuse, loss, or theft of personal data because:</p>
 <ul>
